--- a/days/3/index.html
+++ b/days/3/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dag 3 - Glimåkra Julkalender</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <header>
             <h1>🎄 Dag 3 🎄</h1>
             <a href="../../index.html" class="back-link">← Tillbaka till kalendern</a>
         </header>
-        
+
         <main>
-            <p class="welcome-message">Välkommen! Här kan du skapa något fantastiskt! ✨</p>
+            <img src="lagerpfp.png" alt="Mattias Lagers profilbild" class="profile-picture">
+            <p class="welcome-message">Till Mattias som glider fram, både fräck och grandios,
+                med bräda under fötter och Comic Sans som favorit-prås.
+                Där smutsiga skuggor dansar får du fart och jäkla klös —
+                nu får du något som matchar din stil… god jul, din skate-poet i löss!</p>
             <!-- Din kreativa kod här -->
         </main>
     </div>
-    
+
     <script src="script.js"></script>
 </body>
+
 </html>
