--- a/days/20/index.html
+++ b/days/20/index.html
@@ -14,8 +14,12 @@
         </header>
         
         <main>
-            <p class="welcome-message">Välkommen! Här kan du skapa något fantastiskt! ✨</p>
-            <!-- Din kreativa kod här -->
+            <p class="welcome-message">Klicka på knappen för att öppna en slumpmässig dag! 🎁</p>
+            <button id="randomDayButton" class="christmas-button">
+                <span class="button-icon">🎄</span>
+                <span class="button-text">Öppna en slumpmässig dag!</span>
+                <span class="button-icon">🎅</span>
+            </button>
         </main>
     </div>
     
