--- a/days/15/index.html
+++ b/days/15/index.html
@@ -1,24 +1,96 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dag 15 - Glimåkra Julkalender</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <header>
             <h1>🎄 Dag 15 🎄</h1>
             <a href="../../index.html" class="back-link">← Tillbaka till kalendern</a>
         </header>
-        
+
         <main>
             <p class="welcome-message">Välkommen! Här kan du skapa något fantastiskt! ✨</p>
             <!-- Din kreativa kod här -->
-        </main>
+            <div id="wrapper">
+
+                <img id="globe" src="./image.png" alt="Snowglobe" />
+                <div id="message" class="hidden">🎁 God Jul! Här är dagens överraskning! 🎄</div>
+            </div>
     </div>
-    
+
+    </main>
+    </div>
+    <style>
+        body {
+            background: #1d3557;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            color: white;
+            font-family: Arial, sans-serif;
+        }
+
+        .snowglobe-container {
+            text-align: center;
+        }
+
+        #globe {
+            width: 250px;
+            cursor: grab;
+            transition: transform 0.1s;
+        }
+
+        .shake {
+            animation: shake 0.5s infinite;
+        }
+
+        @keyframes shake {
+            0% {
+                transform: rotate(-5deg);
+            }
+
+            50% {
+                transform: rotate(5deg);
+            }
+
+            100% {
+                transform: rotate(-5deg);
+            }
+        }
+
+        #wrapper {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        #message {
+            margin-top: 20px;
+            font-size: 1.4rem;
+            opacity: 0;
+            transition: opacity 1s;
+            color: black;
+        }
+
+        #message.show {
+            opacity: 1;
+        }
+
+        .hidden {
+            display: none;
+        }
+    </style>
+
     <script src="script.js"></script>
 </body>
+
 </html>
