--- a/days/13/index.html
+++ b/days/13/index.html
@@ -14,8 +14,8 @@
         </header>
         
         <main>
-            <p class="welcome-message">Välkommen! Här kan du skapa något fantastiskt! ✨</p>
-            <!-- Din kreativa kod här -->
+            <p class="welcome-message">Merry Merry! ✨</p>
+            <img src="/days/13/media/images/6135620.jpg" alt="Santa behind a corner">
         </main>
     </div>
     
