--- a/days/24/index.html
+++ b/days/24/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dag 24 - Glimåkra Julkalender</title>
+    <title>Dag 24 - Tomtens terminal</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>🎄 Dag 24 🎄</h1>
+            <h1>🎅 Tomtens terminal 🎅</h1>
             <a href="../../index.html" class="back-link">← Tillbaka till kalendern</a>
         </header>
         
         <main>
-            <p class="welcome-message">Välkommen! Här kan du skapa något fantastiskt! ✨</p>
-            <!-- Din kreativa kod här -->
+            <div id="terminal">
+                <pre id="output"></pre>
+                <div class="input-line"><span class="prompt">></span> <input type="text" id="input" autofocus /></div>
+            </div>
         </main>
     </div>
     
